# sc-referee

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  sc-referee.yml
bench/: analyses.py  biermann_anchor.py  countsplit_bench.py  error_classes.py  expected_metrics.json  fetch_crowell.R  fetch_mathys.py  gbp07_anchor.py  kang_anchor.py  mathys_anchor.py  mathys_build_h5ad.py  mathys_convert.R  metrics.json  muscat_sim.py  run_benchmark.py  run_discrimination.py
data/biermann/: ATTRIBUTION.md  original_analysis.R  patient_pseudobulk_counts.h5ad  sc-referee.yaml
demos/: README.md  registry.yaml
demos/biermann-pseudoreplication/: ATTRIBUTION.md  README.md  sc-referee.yaml
demos/biermann-pseudoreplication-full/: .gitignore  README.md  VERIFIED_RUN.json  build_full.py
demos/genebench-gbp07/: ATTRIBUTION.md  README.md  compile_demo.py  sc-referee-capsule.yaml
demos/kang-paired-ifnb/: README.md  analysis.py  build_demo.py  sc-referee.yaml
demos/multi-claim-pipeline/: ATTRIBUTION.md  README.md  analysis.py  build_demo.py  cells.h5ad  sc-referee.yaml
docs/: architecture.md  compiler-capsule-replay.md  coverage-boundary.md  decision-tree.md
docs/explainers/: 01-conceptual-overview.html  02-function-by-function.html  03-decision-tree.html
fixtures/ambiguous_group/: analysis.py  cells.h5ad  make_fixture.py
fixtures/confounding_alias/: confounding_alias.h5ad  expected_report.json  make_fixture.py  sc-referee.yaml
scripts/: capture_cassette.py  capture_layout_cassette.py  dev-install.sh
src/sc_referee/: __init__.py  _folder_picker.py  audit.py  audit_dimensions.py  bundle.py  bundle_recompute.py  citations.py  cli.py  code_signals.py  column_space.py  config.py  countsplit.py  csp.py  design.py  design_matrix.py  engine.py  environment.py  fitted_design.py  fixes.py  friendly.py  ingest.py  init.py  kernel.py  layout_proposer.py  manifest.py  producer_binding.py  proof_report.py  provenance.py  registry.py  report.py  roles.py  row_ledger.py  row_ledger_digest.py  sink_use.py  (+7 more)
tests/: PIPELINE_BUILD_NOTES.md  contamination_factories.py  csp_factories.py  empty_droplet_fixtures.py  factories.py  finding_cases.py  test_adapter_common.py  test_allele_orientation.py  test_assemble.py  test_audit.py  test_audit_dimensions.py  test_audit_hook.py  test_bench.py  test_benchmark_hardening.py  test_biermann_anchor.py  test_bind.py  test_bulk_rnaseq_diagnostic.py  test_bundle_checks.py  test_bundle_recompute.py  test_calibration.py  test_capsule_bridge.py  test_claim_attribution.py  test_code_signals.py  test_column_space.py  test_column_space_soundness.py  test_compile_from_proposal.py  test_compile_pipeline.py  test_compiler_capsule.py  test_compiler_proposer.py  test_compiler_surface.py  test_config.py  test_config_csp.py  test_confirm.py  test_confounder_candidate.py  test_confounding.py  test_confounding_analyst_model.py  test_confounding_graded.py  test_confounding_numerics.py  test_confounding_random_intercept.py  test_confounding_random_intercept_conditional.py  (+114 more)
(+203 files in other folders)
