[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sc-referee"
version = "0.0.1"
description = "An independent, deterministic referee for single-cell analyses — recomputes the statistically correct result instead of opining."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Alexander King" }]
dependencies = [
    # Cap the two libraries whose next major changes observable behavior a deterministic referee
    # depends on: anndata 0.13 surfaces a phantom `layers[None]` matrix that breaks raw-count
    # selection, and pandas 3.0 rejects non-string values in string dtypes. Pinning keeps CI (and
    # the reported bytes) reproducible across the py3.11/py3.12 matrix. Revisit deliberately.
    "anndata>=0.10,<0.13",
    "numpy>=1.24",
    "scipy>=1.9",
    "pandas>=2.0,<3",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "jsonschema>=4.0",
    "statsmodels>=0.14",
    "patsy>=0.5",
]

[project.optional-dependencies]
# The count-path recompute engine (the engine that can BLOCK). Deferred to D2.
engine = ["pydeseq2>=0.4", "scanpy>=1.10"]
# Claude proposal step (init). Optional by design: init degrades to a deterministic
# heuristic when this or ANTHROPIC_API_KEY is absent.
llm = ["anthropic>=0.40"]
data = ["synapseclient>=4.4"]
dev = ["pytest>=8.0", "anthropic>=0.40"]

[project.scripts]
sc-referee = "sc_referee.cli:app"
referee = "sc_referee.friendly:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sc_referee"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "."]
